2015-03-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65310
	* gcc.dg/vect/pr65310.c: New testcase.

2015-03-05  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64834
	* g++.dg/cpp1y/lambda-generic-uneval1.C: New.

2015-03-04  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/entry_queues3.adb: New test.

2015-03-04  Ian Lance Taylor  <iant@google.com>

	* go.test/go-test.exp (go-gc-tests): Skip nilptr test on s390*.

2015-03-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64227
	* g++.dg/cpp1y/lambda-generic-ice1.C: New.

2015-03-04  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/atomic-comp-swap-release-acquire.c: Add
	-fno-ipa-icf to dg-options
	* gcc.target/aarch64/vect_saddl_1.c: Likewise.
	* gcc.target/aarch64/vect_smlal_1.c: Likewise.

2015-03-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64398
	* g++.dg/cpp0x/decltype62.C: New.

2015-03-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/object_overflow5.adb: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>

	PR ipa/65287
	* gcc.dg/ipa/pr65287.c: New test.

2015-03-03  Martin Jambor  <mjambor@suse.cz>
            Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack12.ads: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>

	* gcc.dg/ipa/PR65282.c: New test.

2015-03-13  Jeff Law  <law@redhat.com>

	PR tree-optimization/65241
	* gcc.c-torture/compile/pr65241.c: New test.

2015-03-03  Georg-Johann Lay  <avr@gjlay.de>

	PR target/64331
	* gcc.target/avr/torture/pr64331.c: New test.

2015-03-03  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka   <hubicka@ucw.cz>

	* g++.dg/ipa/pr65263.C: New test.

2015-03-02  Jan Hubicka   <hubicka@ucw.cz>

	PR ipa/65130
	* gcc.dg/lto/pr65130_0.c: New testcase.
	* gcc.dg/lto/pr65130_1.c: New testcase.

2015-03-02  Jan Hubicka   <hubicka@ucw.cz>

	PR ipa/64988
	* g++.dg/torture/pr64988.C: New testcase.

2015-03-02  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray_atomic_6.f90: New.
